@@ -7,66 +7,14 @@
 
 <sect2 id="rnplatform">
   <title>Platform Improvements</title>
-  <para>In addition to user-visible improvements, GNOME &version; includes a
-  number of improvements to the underlying platform that should be
-  appreciated by developers building applications on top of GNOME's powerful
-  framework.</para>
+  <para>The GNOME &version; Development Platform adds a few small API improvements, while maintaining backwards compatibilty and API-stability. In particular this time we have:
   
-  <sect3 id="rngtk">
-    <title>GTK+</title>
-
-    <para>GTK+ 2.4 adds significant new functionality while maintaining source and binary compatibility with GTK+ 2.2.
-    Major new features include:
-
     <itemizedlist>
-      <listitem><para>New file selector widget, with improved UI, filters, previews, customization, and optional use of the GNOME vfs system.</para></listitem>
-      <listitem><para>New ComboBox widget with improved API, UI, and model/view separation.</para></listitem>
-      <listitem><para>New Expander widget, useful for hiding complex user-interface options.</para></listitem>
-      <listitem><para>Action-based toolbar and menu API.</para></listitem>
-      <listitem><para>Bidirectional improvements, for languages such as Arabic and Hebrew. GTK+ now automatically determines the direction for widgets based on their contents.</para></listitem>
-      <listitem><para>Automatic text completion option for ComboBoxes and Entry widgets.</para></listitem>
-      <listitem><para>Speed-optimization option for TreeViews.</para></listitem>
-      <listitem><para>General performance improvements.</para></listitem>
+      <listitem><para>New API in gnome-vfs to allow detection of local servers via DNS-Based Service Discovery.</para></listitem>
+      <listitem><para>New API is also wrapped in the Platform Bindings, which allow application in programming languages other than C.</para></listitem>
+      <listitem><para>GNOME &version; now includes official Python bindings, in addition to C++, Java, and Perl bindings.</para></listitem>
     </itemizedlist>
 
     </para>
     
-  </sect3>
-
-  <sect3 id="rngnomevfs">
-    <title>gnome-vfs</title>
-
-    <para>The GNOME Virtual File system allows applications to support several protocols and file systems via the same unified API.
-    Improvements in GNOME &version; include
-
-    <itemizedlist>
-      <listitem><para>Support for sftp and Windows SMB protocols.</para></listitem>
-      <listitem><para>Improved authentication, with password keyring storage.</para></listitem>
-      <listitem><para>Detection of mounted drives and network volumes.</para></listitem>
-      <listitem><para>Improved MIME type system, via the freedesktop.org shared standards.</para></listitem>
-    </itemizedlist>
-
-    </para>
-
-  </sect3>
-
-  <sect3 id="rngstreamer">
-    <title>GStreamer</title>
-
-    <para>The GStreamer multimedia framework is gradually maturing, and is now used by several applications, such as
-    Sound Juicer, Rhythmbox, Totem, and Marlin.</para>
-    <para>Improvements in GNOME &version; include
-
-    <itemizedlist>
-      <listitem><para>Support for the ALSA sounds drivers used in Linux kernel 2.6.</para></listitem>
-      <listitem><para>Support for more formats, and better support for existing formats, including MP3, Ogg/Vorbis, FLAC, Wave, and mod.</para></listitem>
-      <listitem><para>Improved error notification.</para></listitem>
-      <listitem><para>Error messages are now translated, so applications can report problems in the user's own language.</para></listitem>
-
-    </itemizedlist>
-
-    </para>
-    
-  </sect3>
-
 </sect2>
