@@ -1,5 +1,9 @@
 2004-09-09  Murray Cumming  <murrayc@murrayc.com>
 
+	* rnplatform.xml: Mentioned stuff. Seems dull though.
+
+2004-09-09  Murray Cumming  <murrayc@murrayc.com>
+
 	* rndesktop.xml: Mention merging of folders when copying.
 
 2004-09-09  Murray Cumming  <murrayc@murrayc.com>
